# algorand-verification

./: README.md  coq-algorand.opam  dune-project  meta.yml
.github/workflows/: docker-action.yml
theories/: algorand_model.v  safety.v  safety_helpers.v
