opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/runtimeverification/algorand-verification"
dev-repo: "git+https://github.com/runtimeverification/algorand-verification.git"
bug-reports: "https://github.com/runtimeverification/algorand-verification/issues"
license: "NCSA"

synopsis: "A verified model of the Algorand consensus protocol in Coq"
description: """
The Algorand consensus protocol is the foundation of a decentralized
digital currency and transactions platform. This project provides a
model of the protocol in Coq, expressed as a transition system over
global states in a message-passing distributed system. Included is
a formal proof of safety for the transition system."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.16"}
  "coq-mathcomp-ssreflect" {>= "2.0.0"}
  "coq-mathcomp-algebra" 
  "coq-hierarchy-builder" {>= "1.4.0"}
  "coq-mathcomp-finmap" {>= "2.0.0"}
  "coq-mathcomp-classical" {>= "1.1.0"}
  "coq-mathcomp-analysis" {>= "1.1.0"}
  "coq-mathcomp-zify" 
  "coq-record-update" 
]

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:distributed algorithms"
  "keyword:blockchain"
  "keyword:consensus"
  "keyword:algorand"
  "logpath:Algorand"
]
authors: [
  "Musab A. Alturki"
  "Jing Chen"
  "Victor Luchangco"
  "Brandon Moore"
  "Karl Palmskog"
  "Lucas Peña"
  "Grigore Roșu"
]
